--- a/RickAndMorty-SwiftUI/Localizable.xcstrings
+++ b/RickAndMorty-SwiftUI/Localizable.xcstrings
@@ -34,6 +34,12 @@
         }
       }
     },
+    "Popover Göster" : {
+
+    },
+    "Popover İçeriği" : {
+
+    },
     "Profile" : {
       "localizations" : {
         "en" : {
